--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ header:hover{
 	background: var(--main-header-background);
 }
 
+.logo
+{
+  text-decoration: none;
+}
+
 .logo img{
 	padding-top: 5px;
 	height: 50px;
@@ -136,6 +141,18 @@ h3{
 	text-shadow: 0px 0px 40px var(--main-decor-color);
 }
 
+h4{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  letter-spacing: normal;
+  font-family: 'Tektur', sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  font-size: 40px;
+  color: var(--main-fonts-color);
+  text-shadow: 0px 0px 40px var(--main-decor-color);
+}
+
 h5{
   padding-top: 30px;
 	padding-bottom: 15px;
@@ -202,6 +219,12 @@ h5{
   width: 300px;
 }
 
+.image-Sk
+{
+  height: 170px;
+  width: 200px;
+}
+
 .projests
 {
   margin: 45px;
@@ -248,6 +271,13 @@ h5{
   /* border-color : #ff009bad; */
 }
 
+#projects-5
+{
+  border : 4px solid #00a9e2;
+  /* border-color : #ff009bad; */
+}
+
+
 #projects-1:hover
 {
   background-color: #4c7800;
@@ -276,6 +306,11 @@ h5{
 {
   background-color: #ff009bad;
   /* border-color : #ff009bad; */
+}
+
+#projects-5:hover
+{
+  background-color: rgba(0, 169, 226, 0.6);
 }
 
 .work a p
@@ -559,6 +594,12 @@ hr {
   {
     padding-top: 290px;
     /*padding-top: 320px;*/
+  }
+
+  h4
+  {
+    font-size:25px;
+    padding-top: 15px;
   }
   .aboutme
   {
